# manus

manus/: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
manus/manus/: hooks.py
manus/manus/api/: api.py  validations.py
