[project]
name = "manus"
authors = [
    { name = "Manus", email = "info@manus.im"}
]
description = "Custom integrations and validations for ERPNext 15"
requires-python = ">=3.10"
license = {text = "MIT"}
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "manus"
