[project]
name = "manus"
version = "0.0.1"
description = "Custom integrations and validations for ERPNext 15"
authors = [{ name = "Manus", email = "info@manus.im"}]
license = {text = "MIT"}
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "manus"
